test/corpus/environment.txt
======================
Environment definition
======================

env dev:
  file = dev.env

---

(source_file
  (env
    (kw_env)
    (identifier)
    (file_definition
      (file_key)
      (filename))
  ))

==============================
Default environment definition
==============================

default env dev:
  file = dev.env

---

(source_file
  (default_env
    (kw_default)
    (kw_env)
    (identifier)
    (file_definition
      (file_key)
      (filename))
  ))

========================
Environment without file
========================

env dev:

---

(source_file
  (ERROR
    (kw_env)
    (identifier)))

=============================
Environment with missing file
=============================

env dev:
  file =

---

(source_file
  (env
    (kw_env)
    (identifier)
    (file_definition
      (file_key)
      (MISSING filename))))


================================
Multiple environment definitions
================================

default env dev:
  file = dev.env

env prod:
  file = prod.env

---

(source_file
  (default_env
    (kw_default)
    (kw_env)
    (identifier)
    (file_definition
      (file_key)
      (filename))
  )
  (env
    (kw_env)
    (identifier)
    (file_definition
      (file_key)
      (filename))))
